# tensine

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  requirements.txt
bindings/: CMakeLists.txt  dtype_pybind.cpp  ops_pybind.cpp  tensine_bindings.hpp  tensine_pybind.cpp  tensor_pybind.cpp
bindings/core/: tensor_pybind.cpp
core/: dtype.c  tensor.c  tensor.h  tensor_print.c  tensor_print.h
core/tests/: test_dtype.c  test_tensor.c
examples/mnist/: evaluate.py  layers.py  model.py  test_linear.py  weight_processing.py
examples/mnist/weights/: mnist_pytorch.ckpt
include/tensine/core/: dtype.h  tensor.h  tensor_print.h
include/tensine/ops/dispatch/: activation_ops.h  elementwise_ops.h  matmul_ops.h  pooling_ops.h
include/tensine/ops/kernels/: activation_dispatch.h  elementwise_dispatch.h  matmul_dispatch.h  pooling_dispatch.h
include/tensine/ops/kernels/activation/: activation.h
include/tensine/ops/kernels/add/: add.h
include/tensine/ops/kernels/common/: elementwise.h  tensor_utils.h
include/tensine/ops/kernels/matmul/: matmul.h
include/tensine/ops/kernels/mul/: mul.h
include/tensine/ops/kernels/pooling/: maxpool.h
include/tensine/ops/kernels/primitives/: vector.h
ops/dispatch/: elementwise_ops.c  elementwise_ops.h
ops/kernels/: TODO.md  elementwise_dispatch.c  elementwise_dispatch.h
ops/kernels/add/: add.c  add.h
ops/kernels/common/: elementwise.c
ops/kernels/tests/: test_add.c
src/: CMakeLists.txt
src/core/: dtype.c  tensor.c  tensor_print.c
src/ops/dispatch/: activation_ops.c  elementwise_ops.c  matmul_ops.c  pooling_ops.c
src/ops/kernels/: TODO.md  activation_dispatch.c  elementwise_dispatch.c  matmul_dispatch.c  pooling_dispatch.c
src/ops/kernels/activation/: softmax.c  softmax.inl
src/ops/kernels/add/: add.c
src/ops/kernels/common/: elementwise.c  tensor_utils.c
src/ops/kernels/matmul/: matmul.c  matmul.inl
src/ops/kernels/mul/: mul.c
src/ops/kernels/pooling/: maxpool2d.c  maxpool2d.inl
src/ops/kernels/primitives/: vector.c
tests/: CMakeLists.txt
tests/core/: test_dtype.c  test_tensor.c
tests/kernels/: test_add.c  test_add.py  test_matmul.py  test_maxpool.py  test_mul.c  test_mul.py  test_softmax.py
